# misophonia-dataset

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  background_annotations.md  binamix_setup.sh  cli.py  docker-compose.yml  pyproject.toml  sadie_setup.py
data/: esc50_to_foams_mapping.json  fsd50k_to_foams_mapping.json
data/mappings/: background_classes.json  fsd50k_to_foams_mapping.json
data/metadata/: esc50_triggers_metadata.csv  fsd50k_eval_triggers_metadata.csv  fsd50k_triggers_metadata.csv  fsdk50k_controls_metadata.csv  fsdk50k_eval_controls_metadata.csv
experiment/: Caddyfile
experiment/assets/: app.js  index.html  privacy.html
experiment/py_analysis/: dummy_data.py
experiment/r_analysis/: Dockerfile  analysis.R
experiment/web/: Caddyfile
misophonia_dataset/: Dataset.py  _analysis.py  _binamix.py  _log.py  dummy_data.py  esc50-extracted.json  esc50k_generate_samples.py  fib.py  foams-extracted.json  fsd50k-extracted.json  fsd50k-zip.txt  fsd50k_eval_setup.sh  fsd50k_generate_controls.py  fsd50k_generate_samples.py  fsd50k_generate_triggers.py  fsd50k_setup.sh  generate_backgrounds.py  interface.py  main.py  miso_dataset.py  misophonia_dataset.py  mixing.py  utils.py
misophonia_dataset/source_data/: _downloading.py  _freesound_license.py  _splits.py  _splitting.py  _utils.py  background_classes.json  esc50.py  esc50_mapping.json  esc50_to_foams_mapping.json  (+5 more)
notebooks/: annoate_fsd50k.ipynb  annotation_notebook.ipynb  example.ipynb  fib.ipynb
r_analysis/: analysis.R
tests/: test_dummy_data.py  test_fib.py
(+27 files in other folders)
